--- a/urls.cfg
+++ b/urls.cfg
@@ -1,6 +1,6 @@
-control=https://control.production.shopblocks.com
+control=https://control.production.shopblocks.com/login
 admin=https://control.production.shopblocks.com
 www=https://shopblocks.com
 api=https://api.shopblocks.com/
 chain=https://chain.shopblocks.com/
-importer=https://importer.shopblocks.com/
+importer=https://importer.shopblocks.com/login
