--- a/urls.cfg
+++ b/urls.cfg
@@ -1,6 +1,6 @@
-control=control.production.shopblocks.com
-admin=control.production.shopblocks.com
-www=shopblocks.com
-api=api.shopblocks.com
-chain=chain.shopblocks.com
-importer=importer.shopblocks.com
+control=https://control.production.shopblocks.com
+admin=https://control.production.shopblocks.com
+www=https://shopblocks.com
+api=https://api.shopblocks.com
+chain=https://chain.shopblocks.com
+importer=https://importer.shopblocks.com
