--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -3,7 +3,7 @@ name: Scheduled Health Check
 # Controls when the action will run.
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "30 * * * *"
 
 jobs:
   health_check_job:
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run Shell Script
         id: shell_script_run
-        run: bash ./healthcheck.sh
+        run: bash ./health-check.sh
