--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: Shopblocks Platform Health Check
 
 # Controls when the action will run.
 on:
+  workflow_dispatch:
   schedule:
     - cron: "30 * * * *"
 
