--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run Shell Script
         id: shell_script_run
-        run: bash ./health-check.sh
+        run: bash health-check.sh
