--- a/urls.cfg
+++ b/urls.cfg
@@ -4,3 +4,4 @@ www=https://shopblocks.com
 api=https://api.shopblocks.com
 chain=https://chain.shopblocks.com
 importer=https://importer.shopblocks.com
+search=https://search.shopblocks.com
