--- a/urls.cfg
+++ b/urls.cfg
@@ -2,6 +2,6 @@ control=https://control.production.shopblocks.com
 admin=https://control.production.shopblocks.com
 www=https://shopblocks.com
 api=https://api.shopblocks.com
-chain=https://chain.shopblocks.com
+chain=https://chain.shopblocks.com/login
 importer=https://importer.shopblocks.com
 search=https://search.shopblocks.com
