--- a/urls.cfg
+++ b/urls.cfg
@@ -1,7 +1,7 @@
 control=https://control.production.shopblocks.com
-admin=https://control.production.shopblocks.com
+admin=https://shopblocks-admin.myshopblocks.com
 www=https://shopblocks.com
 api=https://api.shopblocks.com
-chain=https://chain.shopblocks.com/login
+chain=https://chain.shopblocks.com
 importer=https://importer.shopblocks.com
 search=https://search.shopblocks.com
