[Automated] Update Health Check Logs

--- a/urls.cfg
+++ b/urls.cfg
@@ -5,3 +5,4 @@ api=https://api.shopblocks.com/test-client
 chain=https://chain.shopblocks.com
 importer=https://importer.shopblocks.com
 search=https://search.shopblocks.com
+helpdesk=https://helpdesk.support.shopblocks.com/#login
